--- a/public/yes.html
+++ b/public/yes.html
@@ -4,29 +4,8 @@
 <head>
   <title>Re Start 2020</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://use.typekit.net/uvs3lku.css">
-  <style>
-    #main {
-      text-align: center;
-      position: absolute;
-      top: 31%;
-      /* left: 50%; */
-      width: 100%;
-      font-size: 20px;
-      font-family: Eurostile;
-    }
+  <link rel="stylesheet" href="styles.css">
 
-    #button {
-
-      font-size: 14px;
-      background-color: #FEB265;
-      color: black;
-      border-radius: 30px;
-      padding: 3px 7px;
-      opacity: 0.9;
-      font-family: Eurostile;
-    }
-  </style>
 </head>
 
 <body>
@@ -34,13 +13,12 @@
   <div id="main">
     <!-- <p>typing</p> -->
 
-    <p>Here is how would I start 2020 for the world</p>
-    <form method="POST" action="post">
-        
+    <h3>Here is how I would start 2020 for the world</h3>
+    <form method="POST" action="hope">
+
     <input type="text" name="nexthope" autocomplete="off">
     <input id="button" type="submit" value="submit">
-    <button onclick="location.href='4'" id="button">submit</button>
-
+    <button onclick="location.href='hope'" id="button">submit</button>
     </form>
 
     <!-- <button id="button">save it</button> -->
