--- a/public/index.html
+++ b/public/index.html
@@ -3,26 +3,20 @@
 
 <head>
     <title>Restart 2020</title>
+    <link rel="stylesheet" href="styles.css">
+
 </head>
 <body>
-    <button onclick="generateHope()"></button>
     <span id="hope"></span>
     <script src="hope.js"></script>
 
 
     <div class="main">
-        <p>Do you want to restart 2020?</p>
-        <button onclick="location.href='2'" id="button">yes</button>
-        <button onclick="location.href='3'" id="button">no</button>
+        <h2>Do you want to restart 2020?</h2>
+        <button onclick="location.href='yes'" id="button">yes</button>
+        <button onclick="location.href='no'" id="button">no</button>
       </div>
 
-      
-    <!-- p5 libraries -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
-    <!-- your p5 sketch -->
-    <script type="text/javascript" src="sketch.js"></script>
 </body>
 
 </html>
