--- a/public/no.html
+++ b/public/no.html
@@ -3,11 +3,13 @@
 
 <head>
   <title>Restart 2020</title>
+  <link rel="stylesheet" href="styles.css">
+
 </head>
 
 <body>
 
-    <h2>Be Happy, 2021 is coming</h2>
+    <h2>Enjoy rest of your 2020, and 2021 is coming in</h2>
 
     <p id="demo"></p>
 
