--- a/public/submission.html
+++ b/public/submission.html
@@ -2,62 +2,57 @@
 <html lang='en'>
 
 <head>
-  <title>Re Start 2020</title>
+  <title>welcome to The Compliment Project</title>
   <meta charset="UTF-8" />
   <link rel="stylesheet" href="https://use.typekit.net/uvs3lku.css">
   <style>
-    html,
-    body {
+    #main {
+      text-align: center;
+      position: absolute;
+      top: 31%;
+      /* left: 50%; */
       width: 100%;
-      height: 100%;
+      font-size: 20px;
+      font-family: Eurostile;
+    }
+
+    #button {
+      position: absolute;
+      top: 63%;
+      left: 70%;
+      font-size: 12px;
     }
 
     #stickman {
       position: absolute;
-      top: 33%;
-    }
+      right: 62%;
+      top: 24%;
 
-    .compliment {
-      position: absolute;
-      width: 100%;
-      text-align: center;
-      font-family: Eurostile;
-      top: 31%;
-      font-size: 20px;
-      vertical-align: middle;
-    }
-
-    #button1 {
-      font-size: 14px;
-      background-color: #FEB265;
-      color: white;
-      border-radius: 30px;
-      padding: 3px 7px;
-      opacity: 0.9;
-      margin: 30px;
-      font-family: Eurostile;
     }
   </style>
 </head>
 
 <body>
-    <script>
+  <script>
+    setTimeout(function () {
+      window.location.href = "/"
+    }, 6000)
+  </script>
+  <div id="stickman">
+    <img
+      src="https://static1.squarespace.com/static/5bda94ab1aef1daffa47383e/t/5cd99d104785d37dd32a31dd/1557765392463/love.png?format=1000w"
+      width="165" height="231">
+  </div>
 
-    let myData;
 
-function preload(){
-    // we request our data at the /api endpoint
-    myData = loadJSON("/post");
-    console.log(myData);
-}
+  <div id="main">
+    <p>Your hope for this year is save in our website.</p>
+    <p>Thank you!</p>
+  </div>
+  <!-- <button id="button">get another compliment</button> -->
+  <!-- <button onclick="location.href='2'" id="button">get another compliment</button> -->
 
-</script>
 
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/p5.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.dom.min.js"></script>
-<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/0.7.3/addons/p5.sound.min.js"></script>
-<!-- your p5 sketch -->
 </body>
 
 </html>
-
