--- a/public/submission.html
+++ b/public/submission.html
@@ -4,50 +4,21 @@
 <head>
   <title>welcome to The Compliment Project</title>
   <meta charset="UTF-8" />
-  <link rel="stylesheet" href="https://use.typekit.net/uvs3lku.css">
-  <style>
-    #main {
-      text-align: center;
-      position: absolute;
-      top: 31%;
-      /* left: 50%; */
-      width: 100%;
-      font-size: 20px;
-      font-family: Eurostile;
-    }
-
-    #button {
-      position: absolute;
-      top: 63%;
-      left: 70%;
-      font-size: 12px;
-    }
-
-    #stickman {
-      position: absolute;
-      right: 62%;
-      top: 24%;
-
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
   <script>
     setTimeout(function () {
       window.location.href = "/"
-    }, 6000)
+    }, 10000)
   </script>
-  <div id="stickman">
-    <img
-      src="https://static1.squarespace.com/static/5bda94ab1aef1daffa47383e/t/5cd99d104785d37dd32a31dd/1557765392463/love.png?format=1000w"
-      width="165" height="231">
-  </div>
+
 
 
   <div id="main">
-    <p>Your hope for this year is save in our website.</p>
-    <p>Thank you!</p>
+    <h2>Year 2020 sicks, but you are awesome.</h2>
+    <p>We will keep your hopes, and let us move on.</p>
   </div>
   <!-- <button id="button">get another compliment</button> -->
   <!-- <button onclick="location.href='2'" id="button">get another compliment</button> -->
