--- a/public/submission.html
+++ b/public/submission.html
@@ -11,19 +11,16 @@
   <script>
     setTimeout(function () {
       window.location.href = "/"
-    }, 10000)
+    }, 12000)
   </script>
 
-
-
   <div id="main">
+      
     <h2>Year 2020 sicks, but you are awesome.</h2>
-    <p>We will keep your hopes, and let us move on.</p>
+    <p>We will keep your hopes, and let us move on.You are restarting every morning when you wake up.</p>
+    <img src="mailinglist.png" alt="Mailing" width="500" height="333">
+
   </div>
-  <!-- <button id="button">get another compliment</button> -->
-  <!-- <button onclick="location.href='2'" id="button">get another compliment</button> -->
-
-
 </body>
 
 </html>
