--- a/public/yes.html
+++ b/public/yes.html
@@ -13,7 +13,7 @@
   <div id="main">
     <!-- <p>typing</p> -->
 
-    <h3>Here is how I would start 2020 for the world</h3>
+    <h3>How you would start 2020 for the world</h3>
     <form method="POST" action="hope">
 
     <input type="text" name="nexthope" autocomplete="off">
